---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor convert_exits --rewrite-mode alongside -- tests/snapshots/convert_exits.rs --edition 2021
---
#![allow(unused)]

extern "C" {
    fn abort() -> !;
    fn exit(status: i32) -> !;
}

fn test_abort() {
    unsafe {
        std::process::abort();
    }
}

fn test_exit() {
    unsafe {
        std::process::exit(0);
    }
}

fn test_exit_error() {
    unsafe {
        std::process::exit(1);
    }
}

fn test_exit_variable() {
    let code = 42;
    unsafe {
        std::process::exit(code);
    }
}

fn main() {
    println!("This won't actually run");
}
